hphp/test/zend/good/ext/standard/tests/time/strptime_error.php.skipif
<?hh 
if (!function_exists('strptime')) {
	echo "SKIP strptime function not available in build";
}	 
