hphp/test/zend/bad/ext/standard/tests/time/strptime_error.php.skipif
<?php 
if (!function_exists('strptime')) {
	echo "SKIP strptime function not available in build";
}	 
?> 